# apis-oeai

./: .gitignore  README.md  devenv.nix  devenv.yaml  manage.py  pyproject.toml
.github/: auto-deploy-values.yaml
apis_ontology/: models.py  querysets.py  settings.py  signals.py  tables.py  urls.py
apis_ontology/management/commands/: import_csv.py  import_institutions.py  import_persons.py
apis_ontology/migrations/: 0001_initial.py  0002_person_date_of_birth_person_date_of_birth_date_from_and_more.py  0003_alter_person_person_type_alter_person_profession_and_more.py  0004_alter_person_profession.py  0005_contains_alter_institution_easydb4_reference_and_more.py  0006_alter_place_options_and_more.py  0007_alter_person_profession_alter_place_feature_code_and_more.py  0008_remove_institution_abbreviation_and_more.py  0009_institution_notes_person_notes_and_more.py
