[tool.poetry]
name = "apis-oeai"
version = "0.1.0"
description = "APIS OEAI"
authors = ["Matthias Schlögl"]
license = "MIT"
packages = [{include = "apis_ontology"}]


[tool.poetry.dependencies]
python = "^3.11"
apis-core-rdf = "0.48.0"
apis-acdhch-default-settings = "2.3.1"
django-interval = "^0.5.1"
django-json-editor-field = "^0.4.2"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.8"
pyright = "^1.1.400"
debugpy = "^1.8.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
