[project]
name = "apis-oeai"
version = "0.1.0"
description = "APIS OEAI"
authors = [{ name = "Matthias Schlögl" }]
requires-python = "~=3.11.0"
license = "MIT"
dependencies = [
    "apis-core-rdf==0.55.0",
    "apis-acdhch-default-settings==2.14.0",
    "django-interval>=0.5.1,<0.6",
    "django-json-editor-field>=0.4.2,<0.5",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = ["ruff>=0.11.8,<0.12", "pyright>=1.1.400,<2", "debugpy>=1.8.14,<2"]

[tool.hatch.build.targets.sdist]
include = ["apis_ontology"]

[tool.hatch.build.targets.wheel]
include = ["apis_ontology"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
